[package]
name = "agy-usage"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
open = "5.3"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
rand = "0.8"
unicode-width = "0.2"
