[package]
name = "agy-usage"
version = "0.1.3"
edition = "2024"
authors = ["Yoshihiro OKUMURA <orrisroot@gmail.com>"]
description = "A CLI tool to track Antigravity model quota and usage"
license = "MIT"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6", features = ["derive"] }
open = "5.3"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
rand = "0.10"
unicode-width = "0.2"
self_update = { version = "0.44", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "rustls", "reqwest"] }
colored = "3.1.1"

